@startuml
'https://plantuml.com/class-diagram

class Measurement {
    scan_modules{} : ScanModule
    machine{} : MeasureData | MonitorData
    beamline{} : MeasureData | MonitorData
    device_snapshots{} : MeasureData
    metadata : Metadata
    scan : Scan
    station : Station
    log_messages[] : LogMessage
}

Measurement *-- Metadata
Measurement *-- Scan
Measurement *-- Station

class Metadata {
}

note bottom of Metadata
    See separate diagram.
endnote


class evefile.entities.file.Scan {
}

class evefile.entities.file.Station {
}

class Scan extends evefile.entities.file.Scan

class Station extends evefile.entities.file.Station

class Data {
    data : np.ndarray
    axes[]: AxisData
    metadata : DeviceMetadata
}

class Axis {
    values : np.ndarray
    label: string
    quantity : string
    symbol : string
    unit : string
}

Data *--"n" Axis

@enduml